[project]
name = "my-project"
version = "0.1.0"
description = "Demo"
authors = [
    {name = "omer9823",email = "omer37374@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "typer"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
